Correct nav spacing

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ FILTER STARRED Ideas #BFBFDD */
 
 * {
   margin: 0;
+  /* border: 2px solid red; */
 
 }
 
@@ -38,25 +39,24 @@ p {
 nav {
   background-color: #1F1F3D;
   height: 100%;
-  width: 25%;
+  width: 21%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   text-align: left;
 }
 
 nav > h1 {
   color: #E9E9F3;
-  /* border-bottom: 2px solid #353567; */
-  /* margin-left: 20px; */
-  padding: 30px;
+  padding: 17px;
+  padding-top:30px;
 }
 
 nav > h2 {
   color: #BFBFDD;
-  /* margin-left: 20px; */
-  padding: 30px;
+  padding: 17px;
+  padding-top: 30px;
   font-size: medium;
 }
 
@@ -65,9 +65,13 @@ nav > h2 {
   color: #E9E9F3;
   border: 1px solid #353567;
   height: 5%;
-  font-size: large;
+  font-size: x-large;
   font-weight: 600;
-  padding: 15px;
+  padding: 25px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: 17px;
+  margin-top: 15px;
   margin-bottom: 30px;
   display: flex;
   align-items: center;
@@ -87,6 +91,7 @@ main {
   background-color: #A9AAD2;
   color: #1F1F3D;
   height: 42%;
+  width:81vw;
   font-weight: 700;
   display: flex;
   flex-direction: column;
